refactor: Repository 레이어 Stream.toList() 적용